--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
+name = "ngram_transformers_wrapper"
 version = "0.0.0"
 classifiers = [
     "Programming Language :: Python :: 3",
